[project]
name = "yang-sid-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vojtech Vilimek", email = "vojtech.vilimek@nic.cz" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
